--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc",
+    "start": "node dist/src/index.js",
+    "build": "prisma generate && tsc",
     "migrate": "prisma migrate dev",
     "generate": "prisma generate",
     "postinstall": "prisma generate"
