--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
+  "engines": {
+    "node": ">=18.x"
+  },
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "dotenv": "^17.2.1",
