--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     "rootDir": "./",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "resolveJsonModule": true
   },
   "include": ["src/**/*", "api/**/*"],
