--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "dev": "ts-node src/index.ts",
     "start": "node dist/src/index.js",
@@ -24,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "dotenv": "^17.2.1",
+    "posthog-node": "^5.6.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
